--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 !/zinc/251030/
 !/zinc/251030/ZINC20-2D/
 !/zinc/251030/ZINC20-2D/*.py
+!/crossdocked/
+!/crossdocked/pockets
+!/crossdocked/pockets/*.py
